fix layout and truncate map names

--- a/src/app/main-layout/navigation/navigation.component.scss
+++ b/src/app/main-layout/navigation/navigation.component.scss
@@ -1,6 +1,6 @@
 .sidebar-fixed {
     height: 100vh;
-    width: 270px;
+    width: 265px;
     -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     z-index: 1050;
